// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render PerfectionAppeal closed 1`] = `
<div
  class="PerfectionAppeal"
>
  <button
    aria-disabled="false"
    aria-pressed="false"
    autocomplete="off"
    class="control button2 button2_view_classic button2_size_s button2_theme_normal"
    data-lego="react"
    tabindex="0"
    type="button"
  >
    <span
      class="button2__text"
      data-lego="react"
    >
      i18n:not-a-problem
    </span>
  </button>
</div>
`;

exports[`Should render PerfectionAppeal opened 1`] = `
<div
  class="PerfectionAppeal"
>
  <form
    class="PerfectionAppeal-Form"
  >
    <p
      class="PerfectionAppeal-Title"
    >
      i18n:not-a-problem
    </p>
    <span
      class="control textarea textarea_theme_normal textarea_size_s PerfectionAppeal__Input"
      data-lego="react"
    >
      <span
        class="textarea__wrap"
        data-lego="react"
      >
        <textarea
          class="textarea__control"
          cols="10"
          data-lego="react"
          id="input2"
          placeholder="i18n:placeholder"
          rows="6"
        >
          Message
        </textarea>
      </span>
      <span
        class="textarea__box"
        data-lego="react"
      />
    </span>
    <div
      class="PerfectionAppeal-Explanation"
    >
      i18n:explanation
    </div>
    <div
      class="PerfectionAppeal-Footer"
    >
      <button
        aria-disabled="false"
        aria-pressed="false"
        autocomplete="off"
        class="control button2 button2_view_classic button2_size_s button2_theme_action button2_type_submit"
        data-lego="react"
        tabindex="0"
        type="submit"
      >
        <span
          class="button2__text"
          data-lego="react"
        >
          i18n:common:submit
        </span>
      </button>
      <button
        aria-disabled="false"
        aria-pressed="false"
        autocomplete="off"
        class="control button2 button2_view_classic button2_size_s button2_theme_clear"
        data-lego="react"
        tabindex="0"
        type="button"
      >
        <span
          class="button2__text"
          data-lego="react"
        >
          i18n:common:cancel
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Should render PerfectionAppeal with error 1`] = `
<div
  class="PerfectionAppeal"
>
  <form
    class="PerfectionAppeal-Form"
  >
    <p
      class="PerfectionAppeal-Title"
    >
      i18n:not-a-problem
    </p>
    <span
      class="control textarea textarea_theme_normal textarea_size_s PerfectionAppeal__Input"
      data-lego="react"
    >
      <span
        class="textarea__wrap"
        data-lego="react"
      >
        <textarea
          class="textarea__control"
          cols="10"
          data-lego="react"
          id="input2"
          placeholder="i18n:placeholder"
          rows="6"
        >
          Message
        </textarea>
      </span>
      <span
        class="textarea__box"
        data-lego="react"
      />
    </span>
    <div
      class="PerfectionAppeal-Explanation"
    >
      i18n:explanation
    </div>
    <div
      class="Message Message_type_error Message_view_default PerfectionAppeal-Error"
    >
      <span
        class="Message-Body"
      >
        <div
          class="Error"
        >
          <div
            class="Error-MessagePlace"
          >
            Error
          </div>
        </div>
      </span>
    </div>
    <div
      class="PerfectionAppeal-Footer"
    >
      <button
        aria-disabled="false"
        aria-pressed="false"
        autocomplete="off"
        class="control button2 button2_view_classic button2_size_s button2_theme_action button2_type_submit"
        data-lego="react"
        tabindex="0"
        type="submit"
      >
        <span
          class="button2__text"
          data-lego="react"
        >
          i18n:common:submit
        </span>
      </button>
      <button
        aria-disabled="false"
        aria-pressed="false"
        autocomplete="off"
        class="control button2 button2_view_classic button2_size_s button2_theme_clear"
        data-lego="react"
        tabindex="0"
        type="button"
      >
        <span
          class="button2__text"
          data-lego="react"
        >
          i18n:common:cancel
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Should render PerfectionAppeal with loading 1`] = `
<div
  class="PerfectionAppeal"
>
  <form
    class="PerfectionAppeal-Form"
  >
    <p
      class="PerfectionAppeal-Title"
    >
      i18n:not-a-problem
    </p>
    <span
      class="control textarea textarea_theme_normal textarea_size_s PerfectionAppeal__Input"
      data-lego="react"
    >
      <span
        class="textarea__wrap"
        data-lego="react"
      >
        <textarea
          class="textarea__control"
          cols="10"
          data-lego="react"
          id="input2"
          placeholder="i18n:placeholder"
          rows="6"
        >
          Message
        </textarea>
      </span>
      <span
        class="textarea__box"
        data-lego="react"
      />
    </span>
    <div
      class="PerfectionAppeal-Explanation"
    >
      i18n:explanation
    </div>
    <div
      class="PerfectionAppeal-Footer"
    >
      <button
        aria-disabled="false"
        aria-pressed="false"
        autocomplete="off"
        class="control button2 button2_view_classic button2_size_s button2_theme_action button2_type_submit"
        data-lego="react"
        tabindex="0"
        type="submit"
      >
        <span
          class="button2__text"
          data-lego="react"
        >
          i18n:common:submit
        </span>
      </button>
      <button
        aria-disabled="false"
        aria-pressed="false"
        autocomplete="off"
        class="control button2 button2_view_classic button2_size_s button2_theme_clear"
        data-lego="react"
        tabindex="0"
        type="button"
      >
        <span
          class="button2__text"
          data-lego="react"
        >
          i18n:common:cancel
        </span>
      </button>
      <div
        class="spin2 spin2_size_xs spin2_view_default spin2_tone_default spin2_progress_yes"
        data-lego="react"
      />
    </div>
  </form>
</div>
`;
